--- a/hugo-static-site-generator/themes/hugo-identity-theme/layouts/index.html
+++ b/hugo-static-site-generator/themes/hugo-identity-theme/layouts/index.html
@@ -23,7 +23,7 @@
         <!-- Main -->
           <section id="main">
             <header>
-              <span class="avatar"><img src="/images/avatars/{{ .Site.Params.personal.avatar }}" alt="avatar" height="130" width="130" ></span>
+              <span class="avatar"><img src="{{ .Site.Params.personal.avatar }}" alt="avatar" height="200" width="200" ></span>
               <h1 class="name">
                 {{ with .Site.Params.personal.name }}
                   {{ . }}
